Format code #51
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>